[gd_scene load_steps=8 format=3 uid="uid://c6wkvlg1aps0k"]

[ext_resource type="Script" path="res://src/entities/projectiles/projectile_type.gd" id="1_k42gj"]
[ext_resource type="PackedScene" uid="uid://b2jn3cl33sn6t" path="res://src/components/hitbox_component/hitbox_component.tscn" id="2_6edqo"]
[ext_resource type="PackedScene" uid="uid://bjx8u6yus3ql1" path="res://src/components/health_component/health_component.tscn" id="3_1r30u"]
[ext_resource type="PackedScene" uid="uid://t3000f2tsxew" path="res://src/components/defense_component/defense_component.tscn" id="5_0o1ux"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vur52"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_neult"]
material = SubResource("StandardMaterial3D_vur52")
radius = 0.25
height = 0.75

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_drsjy"]
points = PackedVector3Array(0.242552, 0.169163, 0.0394123, -0.242551, -0.169162, -0.0394121, -0.242552, -0.169163, 0.0394123, 0.119795, -0.342304, -0.0284836, -0.0282104, 0.214279, -0.23124, -0.0507654, 0.203026, 0.231222, 0.0507199, -0.203034, 0.231232, -0.153309, 0.318009, -0.03969, 0.0844379, -0.168898, -0.230841, 0.14162, 0.317212, -0.0736002, -0.118004, -0.258574, -0.174237, -0.129817, -0.293552, 0.129865, 0.242552, -0.169163, -0.0394123, 0.184767, 0.167957, -0.162372, 0.106779, 0.280901, 0.162889, -0.242552, 0.169163, -0.0394123, 0.184767, -0.167957, 0.162372, -0.16235, 0.167935, 0.184789, -0.16235, 0.167935, -0.184789, -0.117624, -0.145687, 0.218499, -0.0512877, 0.353258, 0.0853996, 0.117642, 0.14565, 0.218492, -0.119774, -0.342311, -0.0284902, 0.0625797, -0.341406, 0.108149, -0.117625, -0.145687, -0.2185, -0.0285363, 0.342288, -0.119814, 0.0736455, -0.317202, -0.141615, 0.195459, -0.189824, -0.1396, -0.207679, 0.21325, 0.106676, 0.106677, 0.213252, -0.207681, -0.20647, -0.133904, -0.139511, 0.219422, -0.22501, 0.0618665)

[node name="ProjectileType" type="RigidBody3D"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
collision_mask = 18
script = ExtResource("1_k42gj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_neult")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("_health_component") instance=ExtResource("2_6edqo")]
shape = SubResource("ConvexPolygonShape3D_drsjy")
_hitbox_shape = SubResource("ConvexPolygonShape3D_drsjy")
_health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("_defense_component") instance=ExtResource("3_1r30u")]
_defense_component = NodePath("../DefenseComponent")

[node name="DefenseComponent" parent="." instance=ExtResource("5_0o1ux")]
